substrate/frame/support/test/tests/runtime_ui/conflicting_pallet_index.stderr
error: Pallet indices are conflicting: Both pallets System and Pallet are at index 0
  --> tests/runtime_ui/conflicting_pallet_index.rs:39:9
   |
39 |         System: frame_system,
   |         ^^^^^^

error: Pallet indices are conflicting: Both pallets System and Pallet are at index 0
  --> tests/runtime_ui/conflicting_pallet_index.rs:41:9
   |
41 |         Pallet: pallet,
   |         ^^^^^^
